# SDL2_game

./: .gitignore  First_SDL.sln  README.md
First_SDL/: AssetManager.cpp  AssetsManager.cpp  AssetsManager.h  CMakeLists.txt  Collision.cpp  Collision.h  First_SDL.vcxproj  First_SDL.vcxproj.filters  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Map.cpp  Map.h  TextureManager.cpp  TextureManager.h  Vector2D.cpp  Vector2D.h  main.cpp
First_SDL/ECS/: Animation.h  ColliderComponent.h  Components.h  ECS.h  KeyboardController.h  ProjectileComponent.h  SpriteComponent.h  TileComponent.h  TransformComponent.h
First_SDL/assets/: p16x16.txt
First_SDL/cmake/: FindSDL2.cmake
First_SDL/x64/Debug/: map.obj.enc  vc141.idb
First_SDL/x64/Debug/First_SDL.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  First_SDL.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Debug/: First_SDL.ilk
